--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "next": "^8.1.0",
     "react": "^16.8.6",
